[package]
name = "rusty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["json", "macros"] }
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.0", features = ["v4", "serde"] }